# skills-akaihola

./: .envrc  .gitignore  0001-Add-reflect-extensions-plugin.patch  AGENTS.md  BACKLOG.md  README.md  notebooklm  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: lint.md
.claude/skills/: bauhaus  brave-search  clasohlson  claude-session-logs  code-change-review  context7-skill  conventional-committer  credentials-check  email-mailbox-analyzer  gemini-vision  himalaya-email-manager  k-rauta  markdown-pm  mcp-to-skill  motonet  nano-banana-image  netrauta  notebooklm  pandoc-typst-pdf  pdf-to-markdown  power  project-tracking-scan  puuilo  read-as-markdown  secret-scanner  secrets-scan  taloon  tokmanni  verkkokauppa  yaml_transform  youtube-frame-analysis  youtube-to-markdown  youtube-transcription  zed-threads
.github/scripts/: check_symlinks.py
.github/workflows/: check-symlinks.yml  check-topology.yml  test-himalaya-email-manager.yml  test-reflect-extensions.yml
asana/: README.md  SKILL.md
bauhaus/: SKILL.md
bauhaus/references/: api.md
bauhaus/scripts/: search.py
brave-search/: IMPLEMENTATION_PLAN.md  SKILL.md  TASK_CHECKLIST.md
brave-search/references/: brave_search_examples.md  brave_summarizer_workflow.md  brave_web_search_params.md
brave-search/scripts/: brave_search.py
browser-youtube-history/: README.md  SKILL.md  pyrightconfig.json
browser-youtube-history/scripts/: find_video_details.py  find_youtube_history.py
clasohlson/: SKILL.md
clasohlson/references/: api.md
clasohlson/scripts/: search.py
claude-session-logs/: SKILL.md
claude-session-logs/scripts/: analyze-session.py  search-sessions.py
commit/: SKILL.md
commit-organizer/: README.md  SKILL.md  TRIAGE.md
commit-organizer/examples/: commit-organizer.yml
commit-organizer/scripts/: co_ignore.py  co_plan.py  co_triage.py
context7-skill/: README.md  SKILL.md  executor.py  mcp-config.json  package.json
context7-skill/examples/: test_skill.py
conventional-committer/: SKILL.md
conventional-committer/scripts/: git_context_chunks.py
credentials-check/: SKILL.md
credentials-check/references/: detect_secrets_cli.md
discard-whitespace-hunks/: SKILL.md
ecb-rates/: SKILL.md  fetch_ecb_rates.py
email-mailbox-analyzer/: README.md  SKILL.md
fleet-audit/: SKILL.md
fonecta-lookup/: SKILL.md
gemini-vision/: SKILL.md
himalaya-email-manager/: README.md  SKILL.md
hsl/: SKILL.md
jmap/: SKILL.md  sync_emails.py
k-rauta/: SKILL.md
learn/: SKILL.md
markdown-pm/: SKILL.md  generate_dashboard.py  migrate_projects.py  query_projects.py  update_project.py
mcp-to-skill/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  package.json
motonet/: SKILL.md
nano-banana-image/: SKILL.md
netrauta/: SKILL.md
pandoc-typst-pdf/: SKILL.md
pdf-to-markdown/: SKILL.md
pi-session-logs/: SKILL.md
power/: SKILL.md
processing-scanned-receipts/: SKILL.md  process_receipts.py
project-tracking-scan/: SKILL.md
puuilo/: SKILL.md
read-as-markdown/: SKILL.md
reflect-extensions/: README.md  pyrightconfig.json
secrets-scan/: SKILL.md
sync-plugin-cache/: SKILL.md
taloon/: SKILL.md
tokmanni/: SKILL.md
upstream-pr/: SKILL.md
vault-index/: SKILL.md
verkkokauppa/: SKILL.md
vtt2md/: SKILL.md
youtube-frame-analysis/: SKILL.md
youtube-to-markdown/: SKILL.md
youtube-transcription/: SKILL.md
zed-threads/: SKILL.md
(+90 files in other folders)
