[tool.pyright]
reportAny = false

[project]
name = "skills-akaihola"
version = "0.1.0"
description = "Collection of Claude skills with PEP 723 Python scripts"
dependencies = [
    "html2text>=2024.2.26",
    "httpx>=0.27.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "pygments>=2.17.0",
    "pytest>=7.0.0",
    "rich>=13.7.0",
    "ruamel.yaml>=0.17.0",
    "sqlite-utils>=3.30.0",
    "typer>=0.12.0",
    "zstandard>=0.21.0",
]
requires-python = ">=3.13"