[tool.pyright]
reportAny = false

[project]
name = "skills-akaihola"
version = "0.1.0"
description = "Collection of Claude skills with PEP 723 Python scripts"
dependencies = [
    "html2text>=2024.2.26",
    "httpx>=0.27.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "pygments>=2.17.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "ruamel.yaml>=0.17.0",
    "sqlite-utils>=3.30.0",
    "typer>=0.12.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2024.0.0",
    "zstandard>=0.21.0",
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.graylint]
lint = ["ruff"]
revision = "origin/main..."
src = "."

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",    # Use of `assert` detected
    "CPY001",  # no copyright header in tests
    "DOC201",  # return docs not required in tests
    "PLR2004", # magic values OK in test assertions
    "INP001",  # implicit namespace package OK in tests
    "PLC0415", # imports inside functions OK in fixtures
]
"__init__.py" = [
    "D104",   # missing docstring in public package
    "CPY001", # no copyright header in __init__.py
]
"conftest.py" = [
    "CPY001", # no copyright header in conftest
]
"*/scripts/*.py" = [
    "T201",    # print() calls are intentional in CLI scripts
    "CPY001",  # no copyright header needed in skill scripts
    "DOC201",  # return values not documented (scripts, not library)
    "C901",    # complexity limits relaxed for single-file scripts
    "PLR0912", # branch count relaxed for single-file scripts
    "PLR0914", # local variable count relaxed for single-file scripts
    "ERA001",  # section-header comments are not commented-out code
    "S101",    # assert is acceptable in scripts
]
